# kaistudio-back-sdk-python

./: CLAUDE.md  README.md  example.py  index.py  pyproject.toml  setup.py
kaistudio_back_sdk.egg-info/: PKG-INFO  SOURCES.txt
modules/: FileInstance.py  KaiStudioCredentials.py  ManageInstance.py
modules/core/: CoreModule.py  UserModule.py
modules/global_admin/: GlobalAdminModule.py
modules/studio/: InstanceModule.py  KnowledgeBaseModule.py  OrganizationModule.py  StudioModule.py
