[project]
name = "kaistudio_back_sdk"
version = "20260415"
description = "Python SDK for the KAI Studio Back API"
authors = [
    { name = "KAI", email = "support@kai.ai" }
]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "httpx==0.28.0"
]

[project.urls]
Homepage = "https://github.com/k-ai-Documentation/kaistudio-back-sdk-python"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
